# cubrid-manager

./: .gitignore  README.md
LICENSE/: License_ANTLR.txt  License_CUBRID_JDBC.txt  License_CUBRID_Manager.txt  License_Eclipse_project.txt  License_JFlex.txt  License_JavaCup.txt  License_NAVER.txt  License_novocode.txt
com.cubrid.common.core/: .classpath  .project  build.properties  log4j.properties
com.cubrid.common.core.testfragment/: .classpath  .project
com.cubrid.common.ui/: .classpath  .project  build.properties  plugin.properties  plugin.xml  plugin_jp_JP.properties  plugin_km_KH.properties  plugin_ko_KR.properties  plugin_tr_TR.properties  plugin_zh_CN.properties
com.cubrid.common.update/: plugin.properties  plugin_jp_JP.properties  plugin_km_KH.properties  plugin_ko_KR.properties  plugin_tr_TR.properties  plugin_zh_CN.properties
com.cubrid.common.update.feature/: feature.xml
com.cubrid.cubridmanager.app.feature/: .pmd  .project  feature.properties  feature.xml
com.cubrid.cubridmanager.build/: .project  Makefile.am  build-ci.xml  build.sh  build.xml  cm-macosx-java7-patch.tgz
com.cubrid.cubridmanager.build/installer/linux/: COPYING  CUBRIDManager_Setup.sh  CUBRIDManager_Setup_with_jre.sh  CUBRIDManager_install.sh  CUBRIDManager_install_with_jre.sh  build.sh  build_jre.sh
com.cubrid.cubridmanager.build/installer/mac/: cubridmanager-dmg-dsstore.tgz  package.sh
com.cubrid.cubridmanager.build/installer/win/: COPYING  CUBRIDManager.nsi  CUBRIDManager_with_jre.nsi  CUBRIDManager_x64.nsi  CUBRIDManager_x64_with_jre.nsi  install_text.en  install_text.kr  install_text.zh
com.cubrid.cubridmanager.build/keystore/: cubridkeystore
com.cubrid.cubridmanager.build/product_build_conf/: build.properties
com.cubrid.cubridmanager.build/test/checkstyle/: checkstyle-exclude.properties
com.cubrid.cubridmanager.build/test/checkstyle/ruledocs/: checkstyle-0.6.xml  checkstyle-suppressions.xml  java.header
com.cubrid.cubridmanager.build/test/nsiq/: filefilter.txt
(+3101 files in other folders)
